# XgenML

./: .dockerignore  .gitignore  Dockerfile  README.md  dataset.yaml  docker-compose.yaml  model_catalog.yaml  pyproject.toml  storage.py
.github/workflows/: deploy.yml
src/xgenml/: config.py  error_handlers.py  exceptions.py  main.py
src/xgenml/api/: __init__.py  cache_router.py  model_catalog_router.py  serving_router.py  training_router.py  user_script_router.py
src/xgenml/core/: data_service.py  metrics.py  model_catalog.py  model_provider.py  storage.py  train_many.py
src/xgenml/core/tasks/: __init__.py  anomaly_detection.py  base.py  classfication.py  regression.py  timeseries.py
src/xgenml/core/training/: data_loader.py  evaluator.py  mlflow_manager.py  model_trainer.py
src/xgenml/models/: schemas.py  timeseries_models.py  user_script_schemas.py
src/xgenml/services/: async_training_service.py  batch_serving_service.py  draft_service.py  hyperparameter_optimization.py  model_cache.py  script_executor.py  script_registry.py  script_validator.py  serving_service.py  task_manager.py  training_service.py
src/xgenml/utils/: file_utils.py  logger_config.py
tests/: test_main.py  test_user_scripts.py
